<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Idraw</string>
    <string name="coloring_mode">涂色模式</string>
    <string name="drawing_mode">画画模式</string>
    <string name="coloring_coming_soon">涂色模式即将上线！</string>
    <string name="clear_confirm_title">清空画布</string>
    <string name="clear_confirm_message">确定清空画布吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="select_category">选择类别</string>
    <string name="category_animal">动物</string>
    <string name="category_vehicle">交通工具</string>
    <string name="category_blank">空白画布</string>
    <string name="settings">设置</string>
    <string name="bg_music">背景音乐</string>
    <string name="sound_effects">音效</string>
    <string name="volume">音量</string>
</resources>
